<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/SerialNo_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SerialNo_item"
        android:gravity="center"/>
    <TextView
        android:id="@+id/SerialNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/SerialNo_left"
        android:layout_toRightOf="@+id/SerialNo_left"
        android:gravity="left"
        />
    <TextView
        android:id="@+id/BusinessType_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/SerialNo_left"
        android:text="@string/BusinessType_item"
        android:gravity="center"/>
    <TextView
        android:id="@+id/BusinessType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/BusinessType_left"
        android:layout_toRightOf="@+id/BusinessType_left"
        android:layout_below="@id/SerialNo"
        android:gravity="left"/>
    <TextView
        android:id="@+id/ArtificialNo_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/BusinessType_left"
        android:text="@string/ArtificialNo_item"
        android:gravity="center"/>
    <TextView
        android:id="@+id/ArtificialNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/ArtificialNo_left"
        android:layout_toRightOf="@+id/ArtificialNo_left"
        android:layout_below="@id/BusinessType"
        android:gravity="left"/>
    <TextView
        android:id="@+id/OccurTypeName_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ArtificialNo_left"
        android:text="@string/OccurTypeName_item"
        android:gravity="center"/>
    <TextView
        android:id="@+id/OccurTypeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/OccurTypeName_left"
        android:layout_toRightOf="@+id/OccurTypeName_left"
        android:layout_below="@id/ArtificialNo"
        android:gravity="left"/>
    <TextView
        android:id="@+id/BusinessTypeName_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/OccurTypeName_left"
        android:text="@string/BusinessTypeName_item"
        android:gravity="center"/>
    <TextView
        android:id="@+id/BusinessTypeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/BusinessTypeName_left"
        android:layout_toRightOf="@+id/BusinessTypeName_left"
        android:layout_below="@id/OccurTypeName"
        android:gravity="left"/>
    <TextView
        android:id="@+id/Currency_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/BusinessTypeName_left"
        android:text="@string/Currency_item"
        android:gravity="center"/>
    <TextView
        android:id="@+id/Currency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/Currency_left"
        android:layout_toRightOf="@+id/Currency_left"
        android:layout_below="@id/BusinessTypeName"
        android:gravity="left"/>
    <TextView
        android:id="@+id/BusinessSum_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Currency_left"
        android:text="@string/BusinessSum_item"
        android:gravity="center"/>
    <TextView
        android:id="@+id/BusinessSum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/BusinessSum_left"
        android:layout_toRightOf="@+id/BusinessSum_left"
        android:layout_below="@id/Currency"
        android:gravity="left"/>
    <TextView
        android:id="@+id/ActualPutOutSum_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/BusinessSum_left"
        android:text="@string/ActualPutOutSum_item"
        android:gravity="center"/>
    <TextView
        android:id="@+id/ActualPutOutSum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/ActualPutOutSum_left"
        android:layout_toRightOf="@+id/ActualPutOutSum_left"
        android:layout_below="@id/BusinessSum"
        android:gravity="left"/>
    <TextView
        android:id="@+id/BailRatio_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ActualPutOutSum_left"
        android:text="@string/BailRatio_item"
        android:gravity="center"/>
    <TextView
        android:id="@+id/BailRatio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/BailRatio_left"
        android:layout_toRightOf="@+id/BailRatio_left"
        android:layout_below="@id/ActualPutOutSum"
        android:gravity="left"/>
    <TextView
        android:id="@+id/Balance_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/BailRatio_left"
        android:text="@string/Balance_item"
        android:gravity="center"/>
    <TextView
        android:id="@+id/Balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/Balance_left"
        android:layout_toRightOf="@+id/Balance_left"
        android:layout_below="@id/BailRatio"
        android:gravity="left"/>
    <TextView
        android:id="@+id/OverdueBalance_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Balance_left"
        android:text="@string/OverdueBalance_item"
        android:gravity="center"/>
    <TextView
        android:id="@+id/OverdueBalance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/OverdueBalance_left"
        android:layout_toRightOf="@+id/OverdueBalance_left"
        android:layout_below="@id/Balance"
        android:gravity="left"/>
    <TextView
        android:id="@+id/PutOutDate_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/OverdueBalance_left"
        android:text="@string/PutOutDate_item"
        android:gravity="center"/>
    <TextView
        android:id="@+id/PutOutDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/PutOutDate_left"
        android:layout_toRightOf="@+id/PutOutDate_left"
        android:layout_below="@id/OverdueBalance"
        android:gravity="left"/>
    <TextView
        android:id="@+id/Maturity_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/PutOutDate_left"
        android:text="@string/Maturity_item"
        android:gravity="center"/>
    <TextView
        android:id="@+id/Maturity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/Maturity_left"
        android:layout_toRightOf="@+id/Maturity_left"
        android:layout_below="@id/PutOutDate"
        android:gravity="left"/>
    <TextView
        android:id="@+id/OperateOrgName_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Maturity_left"
        android:text="@string/OperateOrgName_item"
        android:gravity="center"/>
    <TextView
        android:id="@+id/OperateOrgName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/OperateOrgName_left"
        android:layout_toRightOf="@+id/OperateOrgName_left"
        android:layout_below="@id/Maturity"
        android:gravity="left"/>
</RelativeLayout>

