<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="80dp">
    <TextView
        android:id="@+id/IrscreditLevel"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:textSize="33dp"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/CustomerName"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textSize="20dp"
        android:layout_toEndOf="@+id/IrscreditLevel"
        android:layout_toRightOf="@+id/IrscreditLevel"
        android:text="@string/customerName"
        android:gravity="left"/>
    <TextView
        android:id="@+id/CertTypeName_left"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_toEndOf="@+id/IrscreditLevel"
        android:layout_toRightOf="@+id/IrscreditLevel"
        android:layout_below="@+id/CustomerName"
        android:text="@string/cardNumber_item"
        android:gravity="center"/>
    <TextView
        android:id="@+id/CertTypeName"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_toEndOf="@+id/CertTypeName_left"
        android:layout_toRightOf="@+id/CertTypeName_left"
        android:layout_below="@+id/CustomerName"
        android:gravity="left"/>
    <TextView
        android:id="@+id/MobilePhone_left"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_toEndOf="@+id/IrscreditLevel"
        android:layout_toRightOf="@+id/IrscreditLevel"
        android:layout_below="@+id/CertTypeName"
        android:text="@string/telephoneNumber_item"
        android:gravity="center"/>
    <TextView
        android:id="@+id/MobilePhone"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_toEndOf="@+id/MobilePhone_left"
        android:layout_toRightOf="@+id/MobilePhone_left"
        android:layout_below="@+id/CertTypeName"
        android:text="@string/telephoneNumber"
        android:gravity="left"/>
</RelativeLayout>
